...
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
    <string name="send">Send</string>
    <string name="error_email_is_not_valid">Error: invalid email</string>
...
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
...
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
...
    <string name="template_attachment_already_loading">Attachment \"%1$s\" is already loading</string>
    <string name="can_not_attach_this_file">Can\'t attach this file!</string>
    <string name="template_warning_max_total_attachments_size">Total size of added attachments should be under
        %1$s</string>
    <string name="other_email_provider">Other email provider</string>
...
    <string name="wrong_public_key_recorded">Wrong public key recorded. Incoming encrypted email may not be readable.</string>
    <string name="use_public_key_from">Use Public key from</string>
    <string name="key_successfully_copied">Key successfully copied</string>
    <string name="search">Search</string>
    <string name="have_not_any_other_key">I don\'t have any other key</string>
...
    <string name="screenshot">Screenshot</string>
    <string name="report_problem">Report problem</string>
    <string name="include_public_key">Include Public Key</string>
    <plurals name="tell_sender_to_update_their_settings">
        <item quantity="one">You should tell the sender to update their settings and send a
...
    <string name="warning_key_expired">Warning: this key was expired on %1$s</string>
    <string name="warning_no_expected_email">Warning: it seems this key doesn\'t relates to expected email address %1$s</string>
    <string name="warning_one_of_recipients_has_expired_pub_key">One or more of your recipients have expired public keys (marked in orange).\n\nPlease ask them to send you updated public key. If this is an enterprise installation, please ask your systems admin.</string>
    <string name="warning_one_of_recipients_has_revoked_pub_key">One or more of your recipients have revoked public keys (marked in red).\n\nPlease ask them to send you a new public key. If this is an enterprise installation, please ask your systems admin.</string>
    <string name="warning_one_of_recipients_has_not_usable_pub_key">The public key of one of your recipients is wrong or not usable due to security reasons.\n\nPlease ask the recipient(s) to send you a new Public Key.</string>
...
    <string name="already_added">Already added</string>
    <string name="more_recipients" tools:ignore="PluralsCandidate">+%1$d more</string>
    <string name="add_recipient_to_send_message">Please add at least one recipient in \"To\" to send this message</string>
    <string name="send_feedback_failed_hint">There was an error sending message. Our direct email is %1$s.\n\nError details:\n%2$s</string>
    <string name="edit_draft">Edit draft</string>
...
