...
                    style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/from">

                    <EditText
                        android:id="@+id/editTextFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
...
                    android:text="@string/to"
                    android:textColor="@color/nobel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewChipsTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonAdditionalRecipientsVisibility"
                    app:layout_constraintStart_toStartOf="parent"
...
                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_subject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailSubject|textCapSentences|textAutoCorrect"
                    android:maxLines="1"
                    android:paddingTop="@dimen/default_margin_content" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_line_transparent"
                android:hint="@string/prompt_compose_security_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                    android:paddingTop="@dimen/default_margin_small" />

...
