...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_marginBottom="@dimen/default_margin_content_small" />

    <ListView
        android:id="@+id/listViewKeys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_margin_content_small"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_marginEnd="@dimen/default_margin_content_small"
        android:layout_weight="1"
        android:divider="@color/aluminum"
        android:dividerHeight="@dimen/default_single_dip"
        tools:listitem="@layout/pub_key_adapter_item_radio_button" />

    <Button
        android:id="@+id/buttonOk"
        style="@style/AppWidget.Button.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_content_small"
        android:layout_marginEnd="@dimen/default_margin_content_small"
        android:layout_marginBottom="@dimen/default_margin_content_small"
...
