...
                    android:theme="@style/AppWidget.Button.Green"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKeyIdOrEmail" />

                <Button
                    android:id="@+id/buttonLoadFromClipboard"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/margin_between_buttons"
                    android:text="@string/load_from_clipboard"
                    android:theme="@style/AppWidget.Button.Green"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
...
                android:theme="@style/AppWidget.Button.Green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewContacts"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:layout_marginBottom="@dimen/default_margin_content_small"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
...
